<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".demo.MainActivity">

    <Button
        android:id="@+id/btn_show_storage_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        android:onClick="onClick"
        android:text="@string/show_storage_info"/>
    <Button
        android:id="@+id/btn_choose_file"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/btn_show_storage_info"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/btn_choose_image"
        app:layout_constraintHorizontal_weight="1"
        android:onClick="onClick"
        android:text="@string/choose_file"/>
    <Button
        android:id="@+id/btn_choose_image"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/btn_show_storage_info"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/btn_choose_file"
        app:layout_constraintHorizontal_weight="1"
        android:onClick="onClick"
        android:text="@string/choose_image"/>
    <Button
        android:id="@+id/btn_choose_video"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/btn_choose_file"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/btn_choose_audio"
        app:layout_constraintHorizontal_weight="1"
        android:onClick="onClick"
        android:text="@string/choose_video"/>
    <Button
        android:id="@+id/btn_choose_audio"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/btn_choose_image"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/btn_choose_video"
        app:layout_constraintHorizontal_weight="1"
        android:onClick="onClick"
        android:text="@string/choose_audio"/>

    <TextView
        android:id="@+id/tv_msg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/btn_choose_video"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:scrollbars="vertical"
        android:textSize="16sp"
        android:padding="5dp"/>

</android.support.constraint.ConstraintLayout>